syntax = "proto3";

package ly.unnecessary.backend;

option java_package = "ly.unnecessary.backend.api";

import "User.proto";

service CommunityService {
  rpc createCommunity(NewCommunity) returns (Community);
}

message NewCommunity { string displayName = 1; }

message Community {
  int64 id = 1;
  string displayName = 2;
  User owner = 3;
  repeated User moderators = 4;
  repeated User members = 5;
}